--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
   "require": {
     "omnipay/common": "~2.0",
     "gocardless/gocardless-pro": "^1",
-    "php": "^5.5|^7",
+    "php": "^5.5|^7|^8",
     "symfony/event-dispatcher": "^2.8"
   },
   "require-dev": {
